--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.netcode.gameobjects": "1.7.1",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.recorder": "4.0.2",
     "com.unity.test-framework": "1.1.33",
