--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.kylewbanks.scenerefattribute": "https://github.com/KyleBanks/scene-ref-attribute.git",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.behavior": "1.0.6",
     "com.unity.cinemachine": "2.10.1",
@@ -8,7 +9,6 @@
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.31",
-    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.11.1",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.netcode.gameobjects": "1.10.0",
